--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Gradle build
-        run: ./gradlew build
- 
+        run: ./gradlew build -s -i
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: app
+          path: app/build/outputs/apk/release/app-release-unsigned.apk
