Add Git SHA to apk

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: ./gradlew build -s -i
 
       - name: Upload APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
-          name: app
-          path: app/build/outputs/apk/release/app-release-unsigned.apk
+          name: choose-browser.apk
+          path: app/build/outputs/apk/release/*.apk
