--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '15'
+
       - name: Gradle build
         run: ./gradlew build -s -i
 
